# polymesh3

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/polymesh3/: Brush.h  BrushExt.h  Geometry.h  MeshBuilder.h  Polytope.h  PolytopeAlgos.h  TexCoord.h  TopoPolyAdapter.h  typedef.h
platform/msvc/: .gitignore
platform/msvc/projects/: polymesh3.vcxproj  polymesh3_new.vcxproj  polymesh3_new.vcxproj.filters
source/: Brush.cpp  Geometry.cpp  Polytope.cpp  PolytopeAlgos.cpp  TopoPolyAdapter.cpp
